--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "title":"Blog Title",
-    "subTitle":"Blog description",
-    "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
+    "title":"任平生-博客",
+    "subTitle":"我是任平生，分享code算法，人生感悟，编程小妙招的科技类博主",
+    "avatarUrl":"https://avatars.githubusercontent.com/u/38165902?v=4",
     "GMEEK_VERSION":"last"
 }
